<resources>
    <string name="app_name">Root Beer Catalog</string>
    <string name="root_beer_name">Root Beer Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="rating">Rating</string>
    <string name="flavor_notes">Flavor Notes</string>
    <string name="flavor_helper">Enter information about the root beer flavor here.</string>
    <string name="location">Location Information</string>
    <string name="location_helper">Enter information about where this root beer was obtained here.</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="placeholder">Root Beer Image Placeholder</string>
    <string name="barcode">Barcode</string>
    <string name="scan">Scan</string>
    <string name="add_barcode">Add Barcode to Root Beer</string>
    <string name="no_barcode">No Barcode Detected</string>
    <string name="search">Search</string>
    <string name="add_btn">Add</string>
    <string name="detail_name">Root Beer Catalog {title}</string>
    <string name="add_btn_content">Add New Root Beer</string>
</resources>