<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbar"

    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentScrim="?attr/colorPrimary"

        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:toolbarId="@+id/toolbar">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:layout_collapseMode="pin"
            android:layout_height="?attr/actionBarSize"/>
    </com.google.android.material.appbar.CollapsingToolbarLayout>
</com.google.android.material.appbar.AppBarLayout>

<androidx.core.widget.NestedScrollView
android:id="@+id/detailScrollView"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".RootBeerDetailActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/root_beer_name"
                app:layout_constraintEnd_toStartOf="@+id/pic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/manufacturer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/manufacturer"
                app:layout_constraintEnd_toStartOf="@+id/pic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/manufacturerEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Rating"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:hint="@string/rating"
            app:layout_constraintEnd_toEndOf="@+id/manufacturer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manufacturer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ratingEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/ratingUpButton"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/plus"
            app:layout_constraintEnd_toStartOf="@+id/pictureOfRootBeer"
            app:layout_constraintStart_toEndOf="@+id/Rating"
            app:layout_constraintTop_toTopOf="@+id/Rating"
            app:srcCompat="@android:drawable/arrow_up_float" />

        <ImageButton
            android:id="@+id/ratingDownButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/minus"
            app:layout_constraintBottom_toBottomOf="@+id/Rating"
            app:layout_constraintEnd_toStartOf="@+id/pictureOfRootBeer"
            app:layout_constraintStart_toEndOf="@+id/Rating"
            app:layout_constraintTop_toBottomOf="@+id/ratingUpButton"
            app:srcCompat="@android:drawable/arrow_down_float" /-->

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:numStars="5"
                android:rating="2.5"
                app:layout_constraintEnd_toStartOf="@+id/pic"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/manufacturer" />

            <LinearLayout
                android:id="@+id/pic"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/pictureOfRootBeer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/picture_background"
                    android:contentDescription="@string/placeholder"
                    app:srcCompat="@android:drawable/ic_menu_camera" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/flavorNotes"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/flavor_notes"
                app:helperText="@string/flavor_helper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/flavorEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationInfo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/location"
                app:helperText="@string/location_helper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flavorNotes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/quantity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="72dp"
                android:hint="@string/quantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationInfo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quantityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:imeOptions="actionDone"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/quantityUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/quantity"
                app:layout_constraintTop_toTopOf="@+id/quantity"
                app:srcCompat="@android:drawable/arrow_up_float" />

            <ImageButton
                android:id="@+id/quantityDownButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/minus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/quantity"
                app:layout_constraintTop_toBottomOf="@+id/quantityUpButton"
                app:srcCompat="@android:drawable/arrow_down_float" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/barcode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/barcode"
                app:layout_constraintEnd_toStartOf="@+id/scanbtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/barcodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/scanbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/scan"
                app:layout_constraintBottom_toBottomOf="@+id/barcode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/barcode" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_margin="16dp"
        android:src="?attr/actionModeShareDrawable"
        app:layout_anchor="@id/detailScrollView"
        app:layout_anchorGravity="top|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>